# math-rag-apptainer

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  build_shorter.sh  build_tgi.sh  build_tgi_llama.sh  data_stack.def  docker-compose.yml  hf_3.def  hf_3.py  hf_3.sh  llama3_8b_nim.def  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish.yml
apptainer_api/: main.py
apptainer_api/endpoints/: app.py
apptainer_api/utils/: __init__.py  utils.py
assets/huggingface/tei/: tei.py
assets/huggingface/tgi/: tgi.def
assets/nvidia/: nim.def
huggingface/tgi/: tgi.py
math_rag_apptainer/: main.py
math_rag_apptainer/configs/: __init__.py  configs.py
math_rag_apptainer/endpoints/: app.py
math_rag_apptainer/enums/: __init__.py  build_status.py  overlay_create_status.py
math_rag_apptainer/requests/: __init__.py  build_clear.py  build_result_request.py  build_status_request.py  overlay_create.py  overlay_create_request.py  overlay_create_result_request.py  overlay_create_status_request.py
math_rag_apptainer/routers/: __init__.py  health.py  scalar.py
math_rag_apptainer/routers/apptainer/: __init__.py  build.py  overlay.py  version.py
math_rag_apptainer/trackers/: __init__.py  build_status_tracker.py  overlay_create_status_tracker.py
nim/: nim.sh
tei/: tei.def  tei.py
tgi/: hf_cli.def  tgi.def  tgi.py  tgi.sh  tgi_client.def
